Changed the way the given name and surname attributes are stored.
Password quality restrictions set in the Users and Groups module are also checked in this module.
---- Changes since 1.270 ----
The sambaPwdLastSet and sambaPwdCanChange LDAP attributes are updated when a Samba user's password is changed.
When deleting an IMAP user, the address book is fully removed by a recursive delete.
---- Changes since 1.280 ----
Enhanced the batch file format to allow atrbitrary LDAP attributes to be specified in name=value format for new or modified users.
---- Changes since 1.290 ----
The IMAP quota for users with access to Cyrus is now editable, rather than being fixed on  the Module Config page.
Added a Module Config option to display secondary groups as a text box, which makes more sense on systems with a large number of groups.
---- Changes since 1.310 ----
In a user batch file, # is only treated as a comment at the start of a line.
For Samba users, the primary group SID is taken from the actual SID of the selected primary group, where available.
---- Changes since 1.320 ----
Limit the result size to the configured display maximum when requesting users and groups from the LDAP server.
---- Changes since 1.350 ----
UID and GID allocation is now done by querying the LDAP server for specific IDs, rather than fetching a list of all users to find which ones are used. This should be faster on large LDAP servers.
---- Changes since 1.370 ----
All Samba attributes are removed when Samba access is disabled for a user.
---- Changes since 1.380 ----
Added access control options to prevent use of the same UID or GID.
---- Changes since 1.390 ----
Added locking to prevent concurrent writes to the LDAP database, to prevent UID collisions.
---- Changes since 1.400 ----
By default, all new Unix users are given the person object class too, as this seems to be needed in most new LDAP schemas.