@@ -33,7 +33,7 @@ home_style=Automatic home directory style,4,0-home/username,1-home/u/username,2-
 line6=New user options,11
 base_uid=Lowest UID for new users,3,From Users and Groups module
 base_gid=Lowest GID for new groups,3,From Users and Groups module
-md5=Encryption method for passwords,1,3-LDAP MD5,1-Unix MD5,0-crypt,2-Plain text
+md5=Encryption method for passwords,1,3-LDAP MD5,1-Unix MD5,0-crypt,2-Plain text,4-LDAP SSHA
 shells=Build list of shells from,2,fixed-Builtin list,passwd-System users,shells-/etc/shells
 
 line7=New user defaults,11
