@@ -240,6 +240,7 @@ else {
 		}
 
 	local $pfx = $config{'md5'} == 1 || $config{'md5'} == 3 ? "{md5}" :
+	       	     $config{'md5'} == 4 ? "{ssha}" :
 	       	     $config{'md5'} == 0 ? "{crypt}" : "";
 	if ($in{'passmode'} == 0) {
 		# Password is blank
