@@ -57,3 +57,4 @@ Added access control options to prevent use of the same UID or GID.
 Added locking to prevent concurrent writes to the LDAP database, to prevent UID collisions.
 ---- Changes since 1.400 ----
 By default, all new Unix users are given the person object class too, as this seems to be needed in most new LDAP schemas.
+Added support for LDAP SSHA passwords, thanks to Bill Moyers and John Gray.
